# Neve

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  go.mod
.github/workflows/: build_and_tests.yml  cmake-multi-platform.yml
doc/: Bindings.md  Shortcuts.md
include/: .nv_key_queue.h.un~  .nv_threads.h.un~  clib_mem.h  clib_threads.h  nv_array.h  nv_buffer.h  nv_command.h  nv_context.h  nv_draw.h  nv_editor.h  nv_error.h  nv_escapes.h  nv_file.h  nv_gapbuffer.h  nv_key_queue.h  nv_log.h  nv_logging.h  nv_mem.h  nv_render.h  nv_screen.h  nv_str.h  nv_string.h  nv_term.h  nv_threads.h  nv_time.h  nv_tui.h  nv_udb.h  nv_unicode.h  nv_utils.h  sterm.h
include/unicode/: nv_ucd.h  nv_utf.h
src/: .nv_editor.c.un~  .nv_key_queue.c.un~  .nv_main.c.un~  .nv_screen.c.un~  .nv_threads_unix.c.un~  .nv_threads_win32.c.un~  .unitybuild.c.un~  clib_mem.c  clib_threads.c  main.c  nv_buffer.c  nv_command.c  nv_context.c  nv_draw.c  nv_editor.c  nv_error.c  nv_file.c  nv_gapbuffer.c  nv_key_queue.c  nv_log.c  nv_logging.c  nv_main.c  nv_mem.c  nv_render.c  nv_screen.c  nv_str.c  nv_string.c  nv_term.c  nv_term_unix.c  nv_term_win32.c  nv_threads.c  nv_threads_unix.c  nv_threads_win32.c  nv_time.c  nv_tui.c  nv_udb.c  nv_udb_tables.c  nv_unicode.c  sterm.c  sterm_unix.c  (+3 more)
src/unicode/: nv_ucd.c  nv_ucd_tables.c  nv_utf.c
src/unix/: nv_term_unix.c  nv_threads_unix.c  nv_time_unix.c
src/win32/: nv_term_win32.c  nv_threads_win32.c  nv_time_win32.c
tests/: CMakeLists.txt  mixed.test  test.txt
tests/main/: nv_test.c  nv_test.h
tests/test_nv_array/: CMakeLists.txt  arrAppend.c  arrClear.c  arrDestroy.c  arrInsert.c  arrRemove.c  arrReserve.c  arrResize.c
tests/test_nv_buffer/: CMakeLists.txt  bufClose.c  bufInitEmpty.c  bufInitFromFile.c  bufNewEmpty.c  bufRef.c
tests/test_nv_context/: CMakeLists.txt  ctxAppend.c  ctxBufGet.c  ctxBufInsert.c  ctxBufRemove.c  ctxBufReserve.c  ctxBufSetGapIdx.c  ctxBufShrink.c  ctxCurAdd.c  ctxCurAt.c  ctxCurMove.c  ctxCurMoveBack.c  ctxCurMoveDown.c  ctxCurMoveFwd.c  ctxCurMoveLeft.c  ctxCurMoveRight.c  ctxCurMoveToLineEnd.c  ctxCurMoveToLineStart.c  ctxCurMoveToNextParagraph.c  ctxCurMoveToNextWordEnd.c  ctxCurMoveToNextWordStart.c  ctxCurMoveToPrevParagraph.c  ctxCurMoveToPrevWordEnd.c  ctxCurMoveToPrevWordStart.c  ctxCurMoveToTextEnd.c  ctxCurMoveToTextStart.c  ctxCurMoveUp.c  ctxCurRemove.c  ctxCurReplace.c  ctxCursorAdd.c  ctxCursorAt.c  ctxCursorRemove.c  ctxCursorReplace.c  ctxIdxAt.c  ctxInit.c  ctxInsert.c  ctxLineAt.c  ctxLineEnd.c  ctxLineNext.c  ctxLineNextStart.c  (+12 more)
tests/test_nv_string/: CMakeLists.txt  strAppend.c  strAppendC.c  strAsC.c  strBufAppend.c  strBufAppendC.c  strBufClear.c  strBufInit.c  strBufMake.c  strClear.c  strDestroy.c  strFree.c  strInit.c  strInitFromC.c  strNew.c  strNewFromC.c  strReserve.c  strViewInitFromC.c  strViewMakeFromC.c  strViewNext.c
tests/test_nv_unicode/: CMakeLists.txt  ucdCh16CPLen.c  ucdCh16RunLen.c  ucdCh16StrToCh8Str.c  ucdCh16ToCP.c  ucdCh8CPLen.c  ucdCh8Check.c  ucdCh8RunLen.c  ucdCh8StrToCh16Str.c  ucdCh8ToCP.c  ucdIsCPValid.c  utf16CPLen.c  utf16ChRunLen.c  utf16ChToCP.c  utf16ToUtf8.c  utf8CPLen.c  utf8ChRunLen.c  utf8ChToCP.c  utf8Check.c  utf8ToUtf16.c
tests/test_str/: CMakeLists.txt  strAppend.c  strAppendC.c  strAsC.c  strBufAppend.c  strBufAppendC.c  strBufClear.c  strBufInit.c  strBufMake.c  strClear.c  strDestroy.c  strFree.c  strInit.c  strInitFromC.c  strNew.c  strNewFromC.c  strReserve.c  strViewInitFromC.c  strViewMakeFromC.c
tools/: table_generator.py  ucd_gen.py  unicode_parser.py  unicode_props.py
